<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.map.mikronomy.activities.ProductosFormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fillViewport="true" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/REL_ProductosForm">
        <TextView
            android:id="@+id/LAB_MarcaProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_marca_producto"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:inputType="text"
            android:id="@+id/TXT_Marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LAB_MarcaProducto"
            android:ems="10"/>
        <TextView
            android:id="@+id/LAB_NombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_producto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/TXT_Marca"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:inputType="text"
            android:id="@+id/TXT_NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LAB_NombreProducto"
            android:ems="10" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_tienda"
            android:id="@+id/LAB_Tienda"
            android:layout_below="@+id/TXT_NombreProducto"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SPI_Tienda"
            android:layout_toStartOf="@+id/BUT_AddTienda"
            android:layout_below="@+id/LAB_Tienda"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:spinnerMode="dropdown"
            android:minWidth="180dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_aniadir_tienda"
            android:textSize="13sp"
            android:id="@+id/BUT_AddTienda"
            android:layout_alignTop="@+id/SPI_Tienda"
            android:layout_alignRight="@+id/TXT_NombreProducto"
            android:layout_alignEnd="@+id/TXT_NombreProducto"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:enabled="true"
            android:layout_alignBottom="@+id/SPI_Tienda" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_secciones"
            android:id="@+id/LAB_Secciones"
            android:layout_below="@+id/SPI_Tienda"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SPI_Secciones"
            android:layout_toStartOf="@+id/BUT_AddTienda"
            android:layout_below="@+id/LAB_Secciones"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:spinnerMode="dropdown"
            android:minWidth="180dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_precio"
            android:id="@+id/LAB_Precio"
            android:layout_below="@+id/SPI_Secciones"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/DecTXT_Precio"
            android:layout_gravity="bottom"
            android:layout_below="@+id/LAB_Precio"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aceptar"
            android:textSize="13sp"
            android:id="@+id/BUT_Aceptar"
            android:layout_toEndOf="@+id/DecTXT_Precio"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/BUT_AddTienda"
            android:layout_alignStart="@+id/BUT_AddTienda" />
    </RelativeLayout>
</ScrollView>